# language_decoding

./: .gitignore  README.md  pyproject.toml  requirements.txt
chineseeeg2_littleprince/: __init__.py  retrieval.py  text_clustering.py  train.py  train_speech.py  train_speech_sequence.py  train_two_stage.py
configs/: all_clean.yaml  all_clean_fixed_onset_700ms.yaml  all_clean_from_ra_full_finetune.yaml  all_clean_rows_rowe_resampled_431.yaml  all_clean_rows_rowe_resampled_431_multiview4.yaml  littleprince_sentence_audio.yaml  littleprince_sentence_audio_sequence.yaml  littleprince_sentence_audio_sequence_variable.yaml  passive_listening_4subjects.yaml  reading_aloud.yaml  reading_aloud_from_pl_full_finetune.yaml  reading_silent.yaml
scripts/: build_fixed_onset_manifest.py  build_garnettdream_pl_manifest.py  build_gwilliams_meg_speech_sequence_manifest.py  build_littleprince_pl_manifest.py  build_littleprince_sentence_audio_manifest.py  build_littleprince_sentence_audio_sequence_manifest.py  build_readingaloud_manifest.py  build_readingsilent_manifest.py  cache_gwilliams_meg_windows.py  export_littleprince_text_mapping.py  preprocess_gwilliams_meg.py  retrieve_sentence_audio.py  retrieve_sentence_audio_sequence.py  smoke_check.py
tests/: test_audio_segments.py  test_fixed_onset_manifest.py  test_gwilliams_meg_sequence.py  test_manifest_and_reader.py  test_p0_identity_and_splitting.py  test_p0_retrieval_metrics.py  test_p0_training_protocol.py  test_p1_simpleconv_timeagg.py  test_p1_subject_layer.py  test_resampled_collate.py  test_speaker_retrieval_protocols.py  (+3 more)
(+40 files in other folders)
