[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chineseeeg2-littleprince-pl"
version = "0.1.0"
description = "Line-level EEG-text alignment pipeline for ChineseEEG-2 LittlePrince passive listening."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.1",
  "PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
